Correct config parameters

--- a/nextflow.config
+++ b/nextflow.config
@@ -4,8 +4,6 @@ singularity {
 	runOptions ="--no-home"
 	singularity.enabled = true
 	singularity.autoMounts = true
-	//singularity.autoMounts = false
-    	//runOptions = "-B \"$launchDir\" $mounts.datadir $mounts.outdir"
 }
 
 // ensure that no user libraries get mounted into the container
@@ -29,13 +27,14 @@ process {
 
 // Default parameters. Commandline parameters will take priority over these
 params {
-        //slurm_account= 'a_qcif_support'
+        slurm_account= 'a_qcif_support'
 	outdir = './results'
 	datadir='../../../databases'
 	threads = 4
 	//skip_fastp = false
 	skip_fastqc = false
-	//skip_shovill = false
+	//skip_assembly = false
+	shovill_threads = 4
 	genome_size = "2.3M"
 	skip_quast = false
 	quast_threads = 2
