Prepare summary files in main.nf

--- a/nextflow.config
+++ b/nextflow.config
@@ -20,14 +20,14 @@ process {
         //containerOptions = '--no-home'
 	executor='slurm'
 	clusterOptions = '--partition=general'
-	clusterOptions = "--account=a_qcif_support"    	
+	clusterOptions = "--account=a_uqds"    	
 	//clusterOptions = "--account=${params.slurm_account}"
 	time = '8h'
 }
 
 // Default parameters. Commandline parameters will take priority over these
 params {
-        slurm_account= 'a_qcif_support'
+        slurm_account= 'a_uqds'
 	outdir = './results'
 	datadir='../../../databases'
 	threads = 4
@@ -47,9 +47,11 @@ params {
 	skip_kaptive3 = false
 	kaptive_db_9lps = "../../../databases/v1_kaptive3/9lps.gbk"
 	reference_LPS= "../../../databases/reference_LPS.txt"
+	genotype_db="../../../databases/genotypes_db_v1.txt"
 	skip_snippy = false
 	snippy_threads = 6
 	skip_mlst = false
+	mlst_scheme = "pmultocida_2"
 }
 
 mounts {
