Correct account parameter error

--- a/nextflow.config
+++ b/nextflow.config
@@ -20,8 +20,7 @@ process {
         //containerOptions = '--no-home'
 	executor='slurm'
 	clusterOptions = '--partition=general'
-	clusterOptions = "--account=a_uqds"    	
-	//clusterOptions = "--account=${params.slurm_account}"
+	clusterOptions = "--account=${params.slurm_account}"
 	time = '8h'
 }
 
