Add summary_fastqc process using multiqc

--- a/nextflow.config
+++ b/nextflow.config
@@ -21,6 +21,7 @@ params {
 	threads = 4
 	//skip_fastp = false
 	skip_fastqc = false
+	skip_summary_fastqc = false
 	//skip_assembly = false
 	shovill_threads = 4
 	genome_size = "2.3M"
@@ -64,6 +65,7 @@ process {
 	withLabel: very_high_memory { memory = 300.GB }
 	withName: fastp { container = 'docker://quay.io/biocontainers/fastp:0.24.0--heae3180_1' }
 	withName: fastqc { container = 'docker://quay.io/biocontainers/fastqc:0.12.1--hdfd78af_0'  }
+	withName: summary_fastqc { container = 'docker://quay.io/biocontainers/multiqc:1.28--pyhdfd78af_0' }
 	withName: shovill { container = 'docker://quay.io/biocontainers/shovill:1.1.0--hdfd78af_1' }
 	withName: checkm { container = 'docker://quay.io/staphb/checkm:1.2.2' }
 	withName: kraken { container = 'docker://quay.io/biocontainers/kraken2:2.1.3--pl5321h077b44d_4' }
