--- a/nextflow.config
+++ b/nextflow.config
@@ -41,6 +41,14 @@ params {
 	snippy_threads = 6
 	skip_mlst = false
 	mlst_scheme = "pmultocida_2"
+	skip_bakta = false
+	bakta_threads = 8
+	bakta_db = '../../../databases/bakta/db'
+	bakta_protein_ref = '../../../databases/LPS/NC_002663_LPS.gb'
+	bakta_args = ""
+	skip_amrfinder = false
+	amrfinder_db = '../../../databases/amrfinderplus/2025-03-25.1'
+	amrfinder_args = ""
 }
 
 // Process settings. Set job scheduler if appropriate (SLURM, PBS e.g.)
@@ -75,6 +83,8 @@ process {
 	withName: snippy { container = 'docker://quay.io/staphb/snippy:4.6.0-SC2' }
 	withName: quast { container = 'docker://quay.io/biocontainers/quast:5.2.0--py39pl5321h4e691d4_3' } 
 	withName: mlst { container = 'docker://quay.io/biocontainers/mlst:2.23.0--hdfd78af_0' }
+	withName: bakta { container = 'docker://quay.io/biocontainers/bakta:1.11.0--pyhdfd78af_0' }
+	withName: amrfinder { container = 'docker://quay.io/biocontainers/ncbi-amrfinderplus:4.0.23--hf69ffd2_0' }
 }
 
 // Debug and report options
