--- a/nextflow.config
+++ b/nextflow.config
@@ -44,8 +44,7 @@ params {
 	skip_bakta = false
 	bakta_threads = 8
 	bakta_db = '../../../databases/bakta/db'
-	bakta_protein_ref = '../../../databases/LPS/NC_002663_LPS.gb'
-	bakta_args = ""
+	bakta_args = "--proteins ../../../databases/LPS/NC_002663_LPS.gb"
 	skip_amrfinder = false
 	amrfinder_db = '../../../databases/amrfinderplus/2025-03-25.1'
 	amrfinder_args = ""
@@ -78,7 +77,6 @@ process {
 	withName: checkm { container = 'docker://quay.io/staphb/checkm:1.2.2' }
 	withName: kraken { container = 'docker://quay.io/biocontainers/kraken2:2.1.3--pl5321h077b44d_4' }
 	withName: bracken { container = 'docker://quay.io/biocontainers/bracken:3.0--h9948957_2' }
-	withName: kaptive { container = 'docker://quay.io/biocontainers/kaptive:2.0.6--hdfd78af_0' }
 	withName: kaptive3 { container = 'docker://quay.io/biocontainers/kaptive:3.0.0b6--pyhdfd78af_0' }
 	withName: snippy { container = 'docker://quay.io/staphb/snippy:4.6.0-SC2' }
 	withName: quast { container = 'docker://quay.io/biocontainers/quast:5.2.0--py39pl5321h4e691d4_3' } 
