Add shovill default parameters for contig length and coverage

--- a/nextflow.config
+++ b/nextflow.config
@@ -23,6 +23,7 @@ params {
 	skip_fastqc = false
 	skip_summary_fastqc = false
 	//skip_assembly = false
+	shovill_args = "--minlen 200 --mincov 10"
 	shovill_threads = 4
 	genome_size = "2.3M"
 	skip_quast = false
