Add --snippy_args parameter

--- a/nextflow.config
+++ b/nextflow.config
@@ -23,7 +23,8 @@ params {
 	skip_fastqc = false
 	skip_summary_fastqc = false
 	//skip_assembly = false
-	shovill_args = "--minlen 200 --mincov 10"
+	shovill_args = ""
+	//shovill_args = "--minlen 200 --mincov 10"
 	shovill_threads = 4
 	genome_size = "2.3M"
 	skip_quast = false
@@ -39,6 +40,7 @@ params {
 	reference_LPS= "../../../databases/LPS/reference_LPS.txt"
 	subtype_db="../../../databases/LPS/LPS_subtype_database_v1.txt"
 	skip_snippy = false
+	snippy_args = ""
 	snippy_threads = 6
 	skip_mlst = false
 	mlst_scheme = "pmultocida_2"
@@ -60,6 +62,7 @@ process {
 	clusterOptions = '--partition=general'
 	clusterOptions = "--account=${params.slurm_account}"
 	time = '8h'
+	//from nextflow v 24nextflow.enable.failOnIgnore=true
 }
 
 mounts {
