Add option to download kraken, checkm, bakta, amrfinder databases

--- a/nextflow.config
+++ b/nextflow.config
@@ -31,10 +31,13 @@ params {
 	quast_threads = 2
 	skip_kraken = false
 	skip_bracken = false
+	download_kraken_db = false
 	kraken_db = "../../../databases/k2_pluspf_20240605"
 	bracken_threads = 6
 	skip_checkm = false
-	checkm_db = "../../../databases/CheckM-1.2.2"
+	download_checkm_db = false
+	checkm_db = "../../../databases/checkm_data_2015_01_16"
+	//checkm_db = "../../../databases/CheckM-1.2.2"
 	skip_kaptive3 = false
 	kaptive_db_9lps = "../../../databases/kaptive3_LPS_db_v1/9lps.gbk"
 	reference_LPS= "../../../databases/LPS/reference_LPS.txt"
@@ -46,10 +49,14 @@ params {
 	mlst_scheme = "pmultocida_2"
 	skip_bakta = false
 	bakta_threads = 8
-	bakta_db = '../../../databases/bakta/db'
+	download_bakta_db = false
+	//bakta_db = '../../../databases/bakta/db'
+	bakta_db = '../../../databases/bakta_db/db'
 	bakta_args = "--proteins ../../../databases/LPS/NC_002663_LPS.gb"
 	skip_amrfinder = false
-	amrfinder_db = '../../../databases/amrfinderplus/2025-03-25.1'
+	download_amrfinder_db = false
+	//amrfinder_db = '../../../databases/amrfinderplus/2025-03-25.1'
+	amrfinder_db = '../../../databases/amrfinderplus/amrfinderplus_db/latest'
 	amrfinder_args = ""
 }
 
@@ -85,8 +92,8 @@ process {
 	withName: snippy { container = 'docker://quay.io/staphb/snippy:4.6.0-SC2' }
 	withName: quast { container = 'docker://quay.io/biocontainers/quast:5.2.0--py39pl5321h4e691d4_3' } 
 	withName: mlst { container = 'docker://quay.io/biocontainers/mlst:2.23.0--hdfd78af_0' }
-	withName: bakta { container = 'docker://quay.io/biocontainers/bakta:1.11.0--pyhdfd78af_0' }
-	withName: amrfinder { container = 'docker://quay.io/biocontainers/ncbi-amrfinderplus:4.0.23--hf69ffd2_0' }
+	withName: 'bakta|download_bakta_db' { container = 'docker://quay.io/biocontainers/bakta:1.11.0--pyhdfd78af_0' }
+	withName: 'amrfinder|download_amrfinder_db' { container = 'docker://quay.io/biocontainers/ncbi-amrfinderplus:4.0.23--hf69ffd2_0' }
 }
 
 // Debug and report options
